@@ -60,7 +60,6 @@ libutils_modules="
   stddef
   strerror
   strstr
-  xalloc
   "
 
 # gnulib modules used in libpoke/.
